fix: Small nav was not showing in small screens

--- a/src/components/header/SmallNav.module.css
+++ b/src/components/header/SmallNav.module.css
@@ -36,6 +36,7 @@
   }
 
   .container__links {
+    z-index: 10;
     background-color: #fff;
     position: absolute;
     top: 0;
@@ -47,6 +48,7 @@
     padding-right: 24px;
     padding-bottom: 62px;
     transform: translateX(-800px);
+    transition: all 0.7s ease-in-out;
   }
   .links__open {
     transform: translateX(0);
@@ -81,6 +83,7 @@
   .overlay {
     display: none;
     position: fixed;
+    z-index: 1;
     top: 0;
     right: 0;
     bottom: 0;
@@ -89,6 +92,6 @@
   }
   .open {
     display: block;
-    animation: modalopen 0.3s ease-in-out forwards;
+    animation: 0.7s ease-in-out forwards;
   }
 }
